--- a/web/Pages/Transactions/Transaction.cshtml
+++ b/web/Pages/Transactions/Transaction.cshtml
@@ -105,11 +105,12 @@
                 <label asp-for="@Model.Transaction.SiteName">Site Name</label>
             </div>
             <div class="col-sm-6">
-                <input class="form-control" name="Transaction.SiteName" value="@Model.Transaction.SiteName" />
+                <input id="siteSearchInput" class="form-control" name="Transaction.SiteName" value="@Model.Transaction.SiteName" list="siteSearchList"/>
+                <datalist id="siteSearchList"></datalist>
             </div>
-            <div class="col-sm-2">
+            <!-- <div class="col-sm-2">
                 <button id="searchSiteNames" type="button" class="btn btn-info p-2">Search</button>
-            </div>
+            </div> -->
         </div>
         
         <input readonly type="hidden" name="Transaction.SiteLatitude" value="@Model.Transaction.SiteLatitude" />
